# SPL

./: .gitignore  CMakeLists.txt  Makefile  README.md
anvil/: CMakeLists.txt
anvil/include/: assembler.h  error.h  instructions.h  io.h  memory.h  parser.h  vm.h
anvil/src/: assembler.c  error.c  instructions.c  io.c  memory.c  memory.s  parser.c  utils.S  vm.c
anvil/tests/: io_test.asm  test_vm.c
axiom/: CMakeLists.txt
axiom/include/: lexer.h  parser.h
axiom/src/: lexer.c  parser.c
compiler/: CMakeLists.txt
compiler/src/: lexer.c
vm/: CMakeLists.txt
vm/include/: instructions.h  vm.h
vm/src/: instructions.c
